# Run2ESDConverter

./: CMakeLists.txt  README  README.md  copyAliESDEvent.sh  copyArrowDataModel.sh
Converter/: CMakeLists.txt
Converter/src/: Run3AODConverter.cxx  Run3AODConverter.h  Run3AODDumpSchema.cxx  TableBuilder.cxx  o2AODRun2ESDReader.cxx  run2ESD2Run3AOD.cxx  validateAODStream.cxx
Converter/src/Framework/: ASoA.h  CompilerBuiltins.h
Run2DataModel/: CMakeLists.txt  files.cmake
Run2DataModel/src/: AliESDEvent.cxx  AliESDRun.h  AliSimulation.cxx  AliVVertex.h
scripts/: pythonReader.py
